--- a/java.ini
+++ b/java.ini
@@ -2,6 +2,7 @@
 
 ;; java.ini: Activate the PHP/Java extension
 
+;; zend_extension = "/path/to/java.so"
 extension = java.so
 
 ;; If you have installed the java-servlet.ini leave this file alone,
