--- a/mono.ini
+++ b/mono.ini
@@ -19,6 +19,7 @@
 ;; Uncomment one of the following options to enable the extension
 ;; permanently.  The .so is for Linux/Unix, the .dll for Windows.
 
+;; zend_extension="/path/to/mono.so"
 extension = mono.so
 ;extension = php_mono.dll
 [mono]
