--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: php-java-bridge
 Section: web
 Priority: optional
-Maintainer: Andre Felipe Machado <af-machado@uol.com.br>
-Build-Depends:  debhelper (>= 5), libncurses5-dev (>= 5.5-2 ), libselinux1-dev (>= 1.30-1 ), libsepol1-dev (>= 1.12.24-1 ), php5-dev (>= 5.1.0 ) | php4-dev (>= 4.4.4 ), automake (>= 1.6.3 ) | automake1.7 | automake1.8 | automake1.9, sun-java6-jdk (>= 1 ),  locales (>= 2.3.6.ds1-4 ),  gcc (>= 3.2 ),  make (>= 1 ), liblucene-java, libitext-java, dpatch
+Maintainer: Andre Felipe Machado <andremachado@techforce.com.br>
+Build-Depends:  debhelper (>= 5), libncurses5-dev (>= 5.5-2 ), libselinux1-dev (>= 1.30-1 ), libsepol1-dev (>= 1.12.24-1 ), php5-dev (>= 5.1.0 ) , automake (>= 1.6.3 ) | automake1.7 | automake1.8 | automake1.9, sun-java6-jdk (>= 1 ),  locales (>= 2.3.6.ds1-4 ),  gcc (>= 3.2 ),  make (>= 1 ), liblucene-java, libitext-java, dpatch
 Standards-Version: 3.7.2
 XBS-Homepage: http://php-java-bridge.sourceforge.net
 
@@ -10,7 +10,7 @@ XBS-Homepage: http://php-java-bridge.sourceforge.net
 
 Package: php-java-bridge
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, liblucene-java, libitext-java, php5-cli | php4-cli
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, liblucene-java, libitext-java, php5-cli
 Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm.
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
