--- a/java.ini
+++ b/java.ini
@@ -41,3 +41,9 @@ extension = java.so
 ;; error.
 
 ; java.log_file  = @127.0.0.1:4445
+
+;; Use a very restrictive security policy. See 
+;; javabridge.policy for details. You can switch this Off, if you use
+;; some other protection mechanism, for example Security Enhanced Linux.
+
+java.security_policy = On
