--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ export DH_VERBOSE=1
 # actions MUST start after a TAB, not blank spaces
 # builddir for using dh_install for .war files.
 
-# Copyright (C) 2007  Andre Felipe Machado <andremachado@techforce.com.br>
+# Copyright (C) 2008  Andre Felipe Machado <andremachado@techforce.com.br>
 # et al from Debian Project http://www.debian.org , Joey Hess, Craig Small.
 #
 # This program is free software: you can redistribute it and/or modify
@@ -72,7 +72,7 @@ clean-patched:
 	dh_testroot
 	rm -f build-stamp configure-stamp
 	# Add here commands to clean up after the build process.
-	-$(MAKE) clean
+	-$(MAKE) distclean
 	dh_clean
 	rm -rf ${BUILDDIR}
 
