--- a/debian/rules
+++ b/debian/rules
@@ -83,134 +83,154 @@ install: installbasic
 # specifiy destdir debian way
 	$(MAKE) install DESTDIR=${DESTDIR}
 
-# avoid multiple binary packages conflicts
+# avoid multiple binary packages conflicts with --keep
 installbasic:
 	dh_testdir
 	dh_testroot
-	dh_clean -k 
-	dh_installdirs 
+	dh_clean --keep 
 
 # Build architecture-independent files here.
 # creating also docs package without examples files. See /debian/*.docs file
-binary-indep: php-java-bridge-devel php-java-bridge-j2ee
+binary-indep: php-java-bridge-devel php-java-bridge-j2ee binarydocs
 
 # creating j2ee package . See /debian/*j2ee.* files
 # note the -p$@ to use target name package files in /debian as parameters
+# this option defines that a given rule will act only at the specified package
+# Caution: the -i option is for rule acting on ALL architecture INdependent 
+# packages at this WHOLE file, not only at where it is written.
+
 php-java-bridge-j2ee: 
 	dh_testdir
 	dh_testroot
-	dh_installdirs -i -p$@
-	dh_installchangelogs -i -p$@ ChangeLog
-	dh_installdocs -i -p$@
+	dh_installdirs  -p$@
+	dh_installchangelogs  -p$@  ChangeLog
+	dh_installdocs  -p$@
 #	dh_installexamples -p$@
 # using dh_installdirs and dh_install for this task
 # note the absence of leading "/"
-	dh_install -i --fail-missing --package=$@ ${BUILDDIR}$(PHP_EXT_DIR)/JavaBridge.war var/lib/tomcat5/webapps
+	dh_install  --fail-missing --package=$@ ${BUILDDIR}$(PHP_EXT_DIR)/JavaBridge.war var/lib/tomcat5/webapps
 #	dh_install -i -p$@
-#	dh_installmenu -i -p$@
-#	dh_installdebconf -i -p$@
-#	dh_installlogrotate -i -p$@
-#	dh_installemacsen -i -p$@
-#	dh_installpam -i -p$@
-#	dh_installmime -i -p$@
-#	dh_python -i -p$@
-#	dh_installinit -i -p$@
-#	dh_installcron -i -p$@
-#	dh_installinfo -i -p$@
-	dh_installman -i -p$@
-	dh_link -i -p$@
-	dh_strip -i
-	dh_compress -i -p$@
-	dh_fixperms -i -p$@
-#	dh_perl -i -p$@
-#	dh_makeshlibs -i -p$@
-	dh_installdeb -i -p$@
-	dh_shlibdeps -i -p$@
-	dh_gencontrol -i -p$@
-	dh_md5sums -i -p$@
-	dh_builddeb -i -p$@
+#	dh_installmenu -i
+#	dh_installdebconf -i
+#	dh_installlogrotate -i
+#	dh_installemacsen -i
+#	dh_installpam -i
+#	dh_installmime -i
+#	dh_python -i
+#	dh_installinit -i
+#	dh_installcron -i
+#	dh_installinfo -i
+	dh_installman  -p$@
+	dh_link  -p$@
+	dh_strip  -p$@
+	dh_compress  -p$@
+	dh_fixperms  -p$@
+#	dh_perl -i
+#	dh_makeshlibs -i
+	dh_installdeb -p$@
+	dh_shlibdeps  -p$@
+	dh_gencontrol  -p$@
+	dh_md5sums  -p$@
+	dh_builddeb  -p$@
 
 # creating devel package . See /debian/*devel.* files
 # note the -p$@ to use target name package files in /debian as parameters
 php-java-bridge-devel:
 	dh_testdir
 	dh_testroot
-	dh_installdirs -i -p$@
-	dh_installchangelogs -i -p$@ ChangeLog
-	dh_installdocs -i -p$@
-	dh_installexamples -i -p$@
-	dh_install -i --exclude=java-servlet.ini --fail-missing -p$@ ${BUILDDIR}$(PHP_EXT_DIR)/*.jar $(PHP_INCLUDE_DIR)/ext/php-java-bridge
+	dh_installdirs  -p$@
+	dh_installchangelogs  ChangeLog
+	dh_installdocs  -p$@
+	dh_installexamples  -p$@
+	dh_install  --fail-missing -p$@ ${BUILDDIR}$(PHP_EXT_DIR)/*.jar $(PHP_INCLUDE_DIR)/ext/php-java-bridge
 #	dh_install -i -p$@
-#	dh_installmenu -i -p$@
-#	dh_installdebconf -i -p$@
-#	dh_installlogrotate -i -p$@
-#	dh_installemacsen -i -p$@
-#	dh_installpam -i -p$@
-#	dh_installmime -i -p$@
-#	dh_python -i -p$@
-#	dh_installinit -i -p$@
-#	dh_installcron -i -p$@
-#	dh_installinfo -i -p$@
-	dh_installman -i -p$@
-	dh_link -i -p$@
-	dh_strip -i
-	dh_compress -i -p$@
-	dh_fixperms -i -p$@
-#	dh_perl -i -p$@
-#	dh_makeshlibs -i -p$@
-	dh_installdeb -i -p$@
-	dh_shlibdeps -i -p$@
-	dh_gencontrol -i -p$@
-	dh_md5sums -i -p$@
-	dh_builddeb -i -p$@
+#	dh_installmenu -i
+#	dh_installdebconf -i
+#	dh_installlogrotate -i
+#	dh_installemacsen -i
+#	dh_installpam -i
+#	dh_installmime -i
+#	dh_python -i
+#	dh_installinit -i
+#	dh_installcron -i
+#	dh_installinfo -i
+	dh_installman  -p$@
+	dh_link  -p$@
+	dh_strip -p$@
+	dh_compress  -p$@
+	dh_fixperms  -p$@
+#	dh_perl -i
+#	dh_makeshlibs -i
+	dh_installdeb  -p$@
+	dh_shlibdeps  -p$@
+	dh_gencontrol  -p$@
+	dh_md5sums  -p$@
+	dh_builddeb  -p$@
 
 # creating docs package without examples files. See /debian/*.docs file
-# pitfall: packages have "-" in their name. Do not create intermediate rules with this character
+# pitfall: packages have "-" in their name. 
+# Do not create intermediate rules with this character
+binarydocs: php-java-bridge-docs php-java-bridge-j2ee-docs
 
-binary-docs: php-java-bridge-docs php-java-bridge-j2ee-docs
-
-# use different entry points for same code to avoid duplicate processing
-# and multiple entries conffiles
-php-java-bridge-docs:
-php-java-bridge-j2ee-docs:
-installdocs:
+php-java-bridge-docs: 
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs -i -p$@ ChangeLog
-	dh_installdocs -i -p$@
-#	dh_installexamples -i -p$@
-#	dh_install -i -p$@
-#	dh_installmenu -i -p$@
-#	dh_installdebconf -i	 -p$@
-#	dh_installlogrotate -i -p$@
-#	dh_installemacsen -i -p$@
-#	dh_installpam -i -p$@
-#	dh_installmime -i -p$@
-#	dh_python -i -p$@
-#	dh_installinit -i -p$@
-#	dh_installcron -i -p$@
-#	dh_installinfo -i -p$@
-	dh_installman -i -p$@
-	dh_link -i -p$@
-	dh_strip -i -p$@
-	dh_compress -i -p$@
-	dh_fixperms -i -p$@
-#	dh_perl -i -p$@
-#	dh_makeshlibs -i -p$@
-	dh_installdeb -i -p$@
-	dh_shlibdeps -i -p$@
-	dh_gencontrol -i -p$@
-	dh_md5sums -i -p$@
-	dh_builddeb -i -p$@
+	dh_installdirs  -p$@
+	dh_installchangelogs  -p$@  ChangeLog
+	dh_installdocs  -p$@
+	dh_installman  -p$@
+	dh_link  -p$@
+	dh_strip  -p$@
+	dh_compress  -p$@
+	dh_fixperms  -p$@
+	dh_installdeb  -p$@
+	dh_shlibdeps  -p$@
+	dh_gencontrol  -p$@
+	dh_md5sums  -p$@
+	dh_builddeb  -p$@
+
+php-java-bridge-j2ee-docs:
+	dh_testdir
+	dh_testroot
+	dh_installdirs  -p$@
+	dh_installchangelogs  -p$@  ChangeLog
+	dh_installdocs  -p$@
+#	dh_installexamples -i
+#	dh_install -i
+#	dh_installmenu -i
+#	dh_installdebconf -i
+#	dh_installlogrotate -i
+#	dh_installemacsen -i
+#	dh_installpam -i
+#	dh_installmime -i
+#	dh_python -i
+#	dh_installinit -i
+#	dh_installcron -i
+#	dh_installinfo -i
+	dh_installman  -p$@
+	dh_link  -p$@
+	dh_strip  -p$@
+	dh_compress  -p$@
+	dh_fixperms  -p$@
+#	dh_perl -i
+#	dh_makeshlibs -i
+	dh_installdeb  -p$@
+	dh_shlibdeps  -p$@
+	dh_gencontrol  -p$@
+	dh_md5sums  -p$@
+	dh_builddeb  -p$@
 
 # Build architecture-dependent files here.
+# Caution: the -a option is for rule acting on ALL architecture DEPENDENT 
+# packages at this WHOLE file, not only at where it is written.
 binary-arch:
 	dh_testdir
 	dh_testroot
+	dh_installdirs -a
 	dh_installchangelogs -a ChangeLog
 	dh_installdocs -a
 #	dh_installexamples -a
-	dh_install --exclude=JavaBridge.war -a --list-missing ${BUILDDIR}$(PHP_EXT_DIR)/* $(PHP_EXT_DIR)
+	dh_install --exclude=JavaBridge.war -a --fail-missing ${BUILDDIR}$(PHP_EXT_DIR)/* $(PHP_EXT_DIR)
 #	dh_installmenu -a
 #	dh_installdebconf -a	
 #	dh_installlogrotate -a
@@ -234,8 +254,10 @@ binary-arch:
 	dh_md5sums -a
 	dh_builddeb -a
 
-binary: build install binary-indep binary-arch binary-docs
-.PHONY: build build-stamp clean clean-patched binary-indep binary-arch binary-docs binary install configure configure-stamp installdocs installbasic unpatch patchsource patch-stamp  php-java-bridge-j2ee php-java-bridge-devel
+# build and install are implicit, but THIS package source needs 2 cycles.
+# so the first cycle is implicity and this entry is for the second cycle.
+binary: build install binary-arch binary-indep
+.PHONY: build build-stamp clean clean-patched binary-indep binary-arch binarydocs binary install configure configure-stamp installdocs installbasic unpatch patchsource patch-stamp  php-java-bridge-j2ee php-java-bridge-devel php-java-bridge-docs php-java-bridge-j2ee-docs
 
 # using dpatch for flexibility
 unpatch:
