--- a/server/PHPDocConfig.ini
+++ b/server/PHPDocConfig.ini
@@ -1,12 +1,12 @@
 #Sun Mar 16 19:11:29 CET 2008
 pear=off
-output=HTML:frames:default
-defaultpackagename=Java
+output=HTML:frames:DOM/l0l33t
+defaultpackagename=JavaBridge
 parseprivate=off
-directory=/home/jost/Zend/workspaces/DefaultWorkspace/Java
+directory=/home/jost/Zend/workspaces/DefaultWorkspace/java
 target=/home/jost/php-java-bridge/documentation/API
-defaultcategoryname=Java
-title=PHP/Java Bridge
+defaultcategoryname=java
+title=VM Bridge
 hiddendirs=off
 sourcecode=on
 javadocdesc=on
