--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -58,23 +58,23 @@ stamp:
 	date >stamp
 
 JavaBridge.jar: META-INF/java/Java.inc META-INF/java/Mono.inc
-	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath . php/java/bridge/http/*.java php/java/bridge/*.java
+	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath . php/java/bridge/http/*.java php/java/bridge/*.java 2>/dev/null
 	$(PHP_JAVA_DIR)/bin/jar cMf JavaBridge.jar META-INF/java/*.inc META-INF/java/README META-INF/MANIFEST.MF php/java/bridge/http/*.class php/java/bridge/*.class  php/java/bridge/*.properties
 	chmod +x JavaBridge.jar
 
 TestInstallation.class: TestInstallation.java
-	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath . TestInstallation.java
+	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath . TestInstallation.java 
 
 php-servlet.jar: JavaBridge.jar $(SERVLET)
-	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:../unsupported:$(SERVLET) php/java/script/*.java php/java/script/servlet/*.java php/java/bridge/http/*.java php/java/bridge/*.java php/java/servlet/*.java php/java/servlet/fastcgi/*.java
+	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:../unsupported:$(SERVLET) php/java/script/*.java php/java/script/servlet/*.java php/java/bridge/http/*.java php/java/bridge/*.java php/java/servlet/*.java php/java/servlet/fastcgi/*.java 2>/dev/null
 	$(PHP_JAVA_DIR)/bin/jar cf php-servlet.jar php/java/script/servlet/*.class php/java/servlet/*.class php/java/servlet/fastcgi/*.class
 
 script-api.jar: JavaBridge.jar $(SERVLET)
-	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:$(SERVLET) javax/script/*.java
+	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:$(SERVLET) javax/script/*.java 2>/dev/null
 	$(PHP_JAVA_DIR)/bin/jar cf script-api.jar javax/script/*.class
 
 php-script.jar: JavaBridge.jar $(SCRIPT) $(SERVLET)
-	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:../unsupported:$(SERVLET):$(SCRIPT) php/java/bridge/http/*.java php/java/bridge/*.java php/java/script/*.java php/java/script/servlet/*.java
+	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:../unsupported:$(SERVLET):$(SCRIPT) php/java/bridge/http/*.java php/java/bridge/*.java php/java/script/*.java php/java/script/servlet/*.java 2>/dev/null
 	$(PHP_JAVA_DIR)/bin/jar cf php-script.jar META-INF/services/javax.script.ScriptEngineFactory php/java/script/*.class
 
 src.zip: META-INF/java/Mono.inc META-INF/java/JavaProxy.php META-INF/java/Mono.inc
@@ -82,7 +82,7 @@ src.zip: META-INF/java/Mono.inc META-INF/java/JavaProxy.php META-INF/java/Mono.i
 
 
 JavaBridge.war: src.zip JavaBridge.jar $(SERVLET) $(JAVA_BRIDGE_SERVLET_JAR) $(SCRIPT) $(JAVA_BRIDGE_SCRIPT_JAR) $(FACES) $(JAVA_BRIDGE_FACES_JAR) TestInstallation.class META-INF/java/JavaProxy.php
-	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:../unsupported:$(SERVLET):$(SCRIPT) php/java/script/*.java php/java/script/servlet/*.java php/java/bridge/http/*.java php/java/bridge/*.java php/java/servlet/*.java php/java/servlet/fastcgi/*.java
+	$(PHP_JAVA_DIR)/bin/javac $(SOURCE_VERSION) -classpath .:../unsupported:$(SERVLET):$(SCRIPT) php/java/script/*.java php/java/script/servlet/*.java php/java/bridge/http/*.java php/java/bridge/*.java php/java/servlet/*.java php/java/servlet/fastcgi/*.java 2>/dev/null
 	-mkdir WEB-INF/lib WEB-INF/classes
 	cp JavaBridge.jar $(SCRIPT) $(JAVA_BRIDGE_SERVLET_JAR) $(JAVA_BRIDGE_SCRIPT_JAR) $(JAVA_BRIDGE_FACES_JAR) ../unsupported/*.jar WEB-INF/lib
 	cat WEB-INF/cgi/rename_to_php-cgi-i386-linux.ini | sed 's/i386-linux/x86-sunos/;s/^extension=.*$$/;&/' >WEB-INF/cgi/php-cgi-x86-sunos.ini
