--- a/java.ini
+++ b/java.ini
@@ -8,43 +8,28 @@ extension = java.so
 ;; If you have installed the java-servlet.ini leave this file alone,
 ;; edit the servlet or standalone ini file.  Otherwise uncomment the
 ;; following java section and one of the following options:
-; [java]
+[java]
 
-;; If you want to start the default JVM automatically when the HTTP
-;; server starts, disable java.hosts, java.servlet and
-;; java.socketname, set java.java_home=<VM_HOME> and
-;; java.java=<VM_EXE>, for example:
-
-; java.java_home = /usr/java/default
-; java.java      = /usr/java/default/bin/java
-
+;; The socket name for unix domain socket communication.
+;; Example: Start java with:
+;;   export LD_LIBRARY_PATH=/path/to/dir/containing/libnatcJavaBridge.so 
+;;   java -jar JavaBridge.jar LOCAL:/tmp/socket
+;; and set the java.socketname to /tmp/socket with
+;;   java.socketname="/tmp/socket"
+; java.socketname="/tmp/php-java-bridge.socket"
 
 ;; If you have a servlet engine or an application server, deploy
 ;; JavaBridge.war and re-start the servlet engine or the application
 ;; server. Comment out the "java.socketname" option and uncomment
 ;; the following options.
 
-; java.hosts     = 127.0.0.1:8080
-; java.servlet   = On ;; Off, On or User
+;java.hosts     = 127.0.0.1:8080
+;java.servlet   = On ;; Off, On or User
 
 
 ;; The request log level between 0 (log off) and 4 (log debug). The
 ;; default request log level is initialized with the value from to the
-;; Java system property "php.java.bridge.default_log_level" or from
-;; the servlet's init-param: servlet_log_level (see WEB-INF/web.xml)
+;; Java system property "php.java.bridge.default_log_level".
 ;; The default level is 2 (servlet) or 3 (standalone).
 
 ; java.log_level  = 3
-
-;; If you want to use log4j "chainsaw" running on localhost, port 4445
-;; enable the following option. The default "log file" is the standard
-;; error.
-
-; java.log_file  = @127.0.0.1:4445
-
-;; Use a very restrictive security policy. See 
-;; javabridge.policy for details. You can switch this Off, if you use
-;; some other protection mechanism, for example Security Enhanced Linux.
-;; Default is Off.
-
-; java.security_policy = On
