--- a/mono.ini
+++ b/mono.ini
@@ -1,74 +1,23 @@
 ;; -*- mode: Scheme; tab-width:4 -*-
 
-;; Copy this file to the php ini directory (usually /etc/php.d) or
-;; copy its content to the global php.ini (usually /etc/php.ini or
-;; /usr/local/lib/php.ini).
-;; 
-;; Use the mono.socketname and java.hosts to 
-;; control the operation mode:
-;;
-;; 1) mono.socketname set: local system backend started by the
-;;    php-mono-bridge service script.
-;;
-;; 2) mono.hosts set: external backend(s) on a different server(s).
-;;
-;; 3) mono.socketname and mono.hosts off: local backend which
-;;    starts automatically.
-;;
+;; mono.ini: Activate the PHP/Mono extension
 
-;; Uncomment one of the following options to enable the extension
-;; permanently.  The .so is for Linux/Unix, the .dll for Windows.
-
-;; zend_extension="/path/to/mono.so"
+;; zend_extension = "/path/to/mono.so"
 extension = mono.so
-;extension = php_mono.dll
+
+;; If you have installed the mono-servlet.ini leave this file alone,
+;; edit the servlet or standalone ini file.  Otherwise uncomment the
+;; following mono section and one of the following options:
 [mono]
 
-
-;; log level between 0 (log off) and 4 (log debug). The default level
-;; is 1
-;mono.log_level  = 2
-
-
-;; OPTION 1: Use a local backend
-
-;; If you want to start the VM separately, double-click on
-;; MonoBridge.exe or use the php-mono-bridge service script to start
-;; and stop the backend as a system service.  Please see the RedHat
-;; RPM download for an example how to start mono as a system service.
-
-;mono.socketname = 9167
+;; The host, port and protocol.
+mono.hosts     = 127.0.0.1:9167
+mono.servlet   = Off ;; Off
 
 
-;; OPTION 2: Use an application server
+;; The request log level between 0 (log off) and 4 (log debug). The
+;; default request log level is initialized with the value from to the
+;; Mono system property "php.mono.bridge.default_log_level".
+;; The default level is 2 (servlet) or 3 (standalone).
 
-;; If you have an application server running on a different machine,
-;; adjust and uncomment the following option:
-
-;mono.hosts     = "192.168.5.203:9167"
-
-
-;; OPTION 3: start the VM automatically (Linux/Unix only) 
-
-;; Disable the above "mono.socketname" and "mono.hosts" options,
-;; adjust the following settings, if needed.  mono.mono_home is the
-;; directory which contains the MonoBridge.exe and the .dll's it
-;; needs. The mono.mono is the mono executable, usually /usr/bin/mono
-;; or /usr/local/bin/mono. "mono.log_file" is the log file. If off,
-;; the output appears in the web server log file. On windows all these
-;; settings are meaningless because the MonoBridge.exe cannot be
-;; started automatically.  Use option 1 or 2 instead.
-
-;; for php4:
-;mono.mono_home = /usr/lib/php4
-;; for php5:
-;mono.mono_home = /usr/lib/php/modules
-
-;mono.mono = mono
-;mono.mono = /usr/local/bin/mono
-
-
-;; The default "mono.log_file" is the standard output, which
-;; application servers and the php-java-bridge service script
-;; re-direct to their own log files.
-;mono.log_file = /var/log/php-mono-bridge.log
+; mono.log_level  = 3
