--- a/server/WEB-INF/web.xml
+++ b/server/WEB-INF/web.xml
@@ -67,6 +67,16 @@
          </init-param>
         -->
 
+        <!-- Automatically include java/JavaProxy.php  -->
+        <!-- Switch this off if you don't use Java in all of your scripts -->
+        <!-- Default is On. -->
+        <!-- 
+         <init-param>
+           <param-name>php_include_java</param-name>
+           <param-value>Off</param-value>
+         </init-param>
+        -->
+
         <load-on-startup>0</load-on-startup>
     </servlet>
 
